# marsapilatam

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.cursor/rules/: agent-workflow.mdc  (+14 more)
.streamlit/: config.toml  secrets.toml.example
bloomberg/: __init__.py  api_models.py  blpapi_client.py  exceptions.py  pricing_result.py
configs/: __init__.py  curves_catalog.py  curves_config.py  derivatives_config.py  i18n.py  krr_config.py  portfolio_config.py  settings.py  stress_config.py  swaps_config.py
demo_data/: S193_CLP.6m.json  S329_COP.OIS.json  S374_PEN.OIS.json  S490_USD.SOFR.json  S514_EUR.OIS.ESTR.json  S583_MXN.OIS.TIIE.json  S89_BRL.BMandF.json  sofr_schedules.json
docs/: mars_api_examples.md  marsapi_swagger.json
examples/: curves_example.py  fx_options_example.py  portfolio_example.py  pricing_example.py  swaps_example.py
instruments/: __init__.py  base.py  equity_option.py  fx_option.py  swap.py
marsapilatam-old/: MARS_API_LatAm.py  requirements.txt  todo.txt
pages/: 1_📈_Curves.py  async_swaps.py  curves.py  deal_info.py  fx_derivatives.py  home.py  krr.py  portfolio.py  stress_testing.py  swaps.py
scripts/: download_curves_demo_data.py  download_deal_info_demo_data.py  download_demo_data.py  download_fx_deriv_demo_data.py  download_fx_rates_demo_data.py  download_swap_demo_data.py  refresh_demo_data.py
services/: __init__.py  bootstrap_service.py  curves_service.py  deal_info_service.py  fx_derivatives_service.py  fx_service.py  portfolio_service.py  risk_service.py  security_service.py  stress_service.py  swaps_service.py
(+93 files in other folders)
